<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/Light_blue"
    tools:context=".MoreFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Moreinfo"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="25dp"
        android:textStyle="bold|italic"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:text="@string/call"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textSize="18sp"
        android:layout_marginLeft="20dp" />

    <Button
        android:id="@+id/call_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:text="    Call Now    "
        android:layout_marginLeft="250dp"
        android:textColor="@color/black" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginLeft="20dp"
        android:text="@string/mail"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="276dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="308dp" />

    <Button
        android:id="@+id/mail_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:backgroundTint="@color/purple"
        android:text="   Email Now   "
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="278dp"
        tools:layout_editor_absoluteY="279dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="20dp"
        android:text="@string/message"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/msg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:text="Message Now "
        android:layout_marginLeft="250dp"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="253dp"
        tools:layout_editor_absoluteY="215dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginLeft="20dp"
        android:text="@string/share"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="358dp" />

    <Button
        android:id="@+id/share_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:text="   Share Now    "
        android:layout_marginLeft="250dp"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="274dp"
        tools:layout_editor_absoluteY="361dp" />


</LinearLayout>