<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Light_blue"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Home"
        android:text="@string/Home"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/blue" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:text="@string/home_info"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:lineSpacingExtra="5dp"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Disaster Management Kit"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/blue"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:text="@string/disaster_mgmt_kit"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:lineSpacingExtra="5dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/link"
        android:text="https://emergency disaster management kit"
        android:textColor="@color/Blue_link"
        android:backgroundTint="@color/Light_blue"/>

</LinearLayout>
</ScrollView>